# Skippy_space

./: .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
agent_space/: CLAUDE.md  README.md  skippy.md
agent_space/boards/: coding.md  design.md  devops.md  engineering.md  finance.md  marketing.md  publishing.md  research.md
agent_space/staff/: agent-creator.md  memory-manager.md  psych-monitor.md  skill-auditor.md
apps/: README.md
apps/agent-runtime/: README.md  package.json  tsconfig.json  tsup.config.ts
apps/shell/: package.json
apps/shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/icons/: README.md  icon.icns
apps/shell/src-tauri/src/: channel.rs  cmd_set_model.rs  envelope.rs  git_autocommit.rs  lib.rs  main.rs  project_tree.rs  pty.rs  sidecar.rs
apps/ui/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: PLAYWRIGHT.md  PRD.md
docs/research/: 01_hoyabox_recon.md  02_orchestration_frameworks.md  03_bridgemind_youtube.md  04_rts_orchestration.md  05_karpathy_wiki.md  06_obsidian_integration.md  07_tech_stack.md
infra/: README.md  docker-compose.yml
scripts/: README.md  dev.ps1  git-autocommit.mjs  phase0-validate.mjs  phase1-down.ps1  phase1-status.ps1  phase1-up.ps1  phase1-validate.mjs  phase2-validate.mjs  skippy-prompt-smoke.mjs
vault/: .gitignore  CLAUDE.md
(+76 files in other folders)
